prometheus/manifests/base/resources/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
